--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,11 @@
         },
         {
             "src": "/layout.css",
-            "dest": "/public/layout.css"
+            "dest": "/public/css/layout.css"
         },
         {
             "src": "/style.css",
-            "dest": "/public/style.css"
+            "dest": "/public/css/style.css"
         },
         {
             "src": "/public/assets/icons/(.*).png",
